--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 					</a>
 				</div>
 			</div>
-
 			<div class="stage-chat stage-chat-planos inative-chat">
 				<a
 					href="javascript:void(0)"
@@ -88,7 +87,10 @@
 					></textarea>
 				</div>
 				<div class="container-links-chat">
-					<a href="javascript:void(0)" class="button-enviar-chat">
+					<a
+						href="javascript:void(0)"
+						class="button-enviar-chat button-enviar-confirm-planos"
+					>
 						ENVIAR <img src="./arrow-right.svg" alt=""
 					/></a>
 				</div>
@@ -122,6 +124,29 @@
 				</div>
 			</div>
 
+			<div class="stage-chat stage-chat-confirm-planos inative-chat">
+				<a
+					href="javascript:void(0)"
+					class="button-voltar-chat-confirm-outros button-voltar-chat"
+					><img src="./arrow-left.svg" alt="" /> voltar</a
+				>
+				<div>
+					<h3 class="title-chat">Confirmação</h3>
+					<p class="subtitle-chat">
+						Confirme os dados que serão enviados, lembrando que assim que o
+						aplicativo for aberto, basta clicar em enviar para que a mensagem
+						pré configurada por nós baseada sua resposta chegue a nossa equipe
+					</p>
+				</div>
+				<div></div>
+				<div class="container-links-chat">
+					<a href="" class="button-enviar-chat button-send-info-planos">
+						ENVIAR <img src="./arrow-right.svg" alt=""
+					/></a>
+				</div>
+			</div>
+
+			<!-- OUTROS  -->
 			<div class="stage-chat stage-chat-outros inative-chat">
 				<a
 					href="javascript:void(0)"
